--- a/70759-h/70759-h.htm
+++ b/70759-h/70759-h.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset=UTF-8"UTF-8">
+  <meta charset="UTF-8">
   <title>Ye Antient Wrecke.—1626 | Project Gutenberg</title>
   <link rel="icon" href="images/cover.jpg" type="image/x-cover">
   <style>
